test_suite/tests/ui/type-attribute/into.stderr
error: failed to parse type: into = "Option<T"
 --> tests/ui/type-attribute/into.rs:4:16
  |
4 | #[serde(into = "Option<T")]
  |                ^^^^^^^^^^
